# WYM.inc

./: README.txt  contact.csv
monitoring/: Dockerfile  pyproject.toml  requirements.txt
monitoring/monitoring/: dashboard.py  dbStats_utils.py  utils.py
stack/: docker_compose.yml
web-app/: .gitignore  Dockerfile  contact.csv  pyproject.toml  requirements.txt
web-app/web_app/: db_utils.py  model_utils.py  web_app.py
web-app/web_app/templates/: about.html  contact.html  contacted.html  home.html  index.html  model.html  summary.html
