[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["Maxime <maxime.mock@le-campus-numerique.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.2"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"
wordcloud = "^1.8.2"
matplotlib = "^3.5.3"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
