[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Maxime <maxime.mock@le-campus-numerique.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy-Utils = "^0.38.3"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
launch = "web_app.web_app:main"
